--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext .ts,.tsx --fix"
+    "dev:server": "json-server server.json -p 3333 -w -d 500"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.2",
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.30.0",
     "eslint-plugin-react": "^7.31.11",
+    "json-server": "^0.17.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
