--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,3 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
-    "overrides": [
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "rules": {
-      "no-unused-vars": 0,
-      "react/react-in-jsx-scope": 0,
-      "react/jsx-uses-react": 0
-    }
+    "extends": "@rocketseat/eslint-config/react"
 }
